--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>Bigpara</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+            <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.thoughtworks.gauge/gauge-java -->
@@ -74,6 +77,11 @@
             <version>3.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
     </dependencies>
 
@@ -94,24 +102,6 @@
                 <artifactId>gauge-maven-plugin</artifactId>
                 <version>1.3.0</version>
 
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.0.1</version>
-                <executions>
-                    <execution>
-                        <id>copy-resources</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
